19Nov22=======================================================================
1. "Fix" Badword detection in spots and announces etc. 
   NOTE: setting $DXCommandmode::maxbadcount to 0 (default 3) will disable
   autologout on swearing. But any (detected) swearing will be logged.
   User generated swearing will not be propagated, not will incoming 
   protocol. 
2. Fix is_ipaddr so that it accepts more (most?) valid IPV6 addresses that
   actual real IP addresses that might appear as endpoints. 
3. Add CTY-3237 prefixes.
06Jun22=======================================================================
1. Fix show/wcy so that it works even if no wcy broadcasts have been received
   this month. 
01Jun22=======================================================================
1. Fix show/(v)hfstats commands.
2. Add CTY-3221 Prefixes.
07Feb22=======================================================================
1. (re)add set/seeme and show/seeme commands which don't appear to have
   "taken". 
03Feb22=======================================================================
1. Improve/add the help text for grepdbg and watchdbg. 
31Jan22=======================================================================
1. Set $RBN::respottime to 3 minutes. NOTE change of name from 
   $RBN::minspottime.
2. Allow callsigns connected to a node with an SSID to get SEEME RBN spots
   for their base callsigns. So G1TLH-2, G1TLH-7 will get **SEEME** RBN spots
   if G1TLH is spotted on the RBN system - even is are both connected to the
   node and G1TLH is not. Each call is unique and each callsign (variation) 
   must have done a set/seeme + set/skimmer. .
29Jan22=======================================================================
1. Implement RBN set/seeme which displays any passing RBN spots for your
   callsign in "raw" format. 
28Jan22=======================================================================
1. Add Capabilities Line to logged in users.