@@ -1,0 +1,128 @@
+ACBAR
+AGBAR
+AKELA
+ALAH
+ALHA
+ANIHILATE
+ANIHILATION
+ANUS
+ARSE
+ATACK
+AVENGER
+BARENDERO
+BARSTARD
+BASTARD
+BASURA
+BINLADAN
+BINLADEN
+BLOD
+BOLCK
+BOLOCK
+BOMB
+BUGER
+BUST
+CABRON
+CHRISTIAN
+COCA
+COCK
+COJONES
+CORNUDO
+CORNUPETA
+CORUPTO
+CRAP
+CUEZETA
+CUNT
+DAMN
+DEADH
+DEATH
+DESGRACIADO
+DETH
+DICKHEAD
+DUMBAS
+DXFUN
+ENFERMITO
+ENFERMO
+ENVIDIOSO
+ESTUPIDO
+EXPLOSIVE
+FOLA
+FUCK
+FUK
+FUNKER
+HACKED
+HIJOPUTA
+HIJOS
+HITLER
+IDIOT
+IMBECIL
+JERK
+JIHAD
+JODAN
+JODE
+JODIENDO
+JOETE
+KIL
+KLOT
+LADEN
+LADIN
+LADRON
+MAFIA
+MAMON
+MARICA
+MARICONAZO
+MASMURDER
+MEGATON
+MENTAL
+MENTIROSO
+MIERDA
+MORO
+MOTHERFUCKER
+MULSIM
+MURDER
+MUSLIM
+NUKE
+OSAMA
+PEDERASTA
+PIS
+PLONKER
+POLA
+POLITIC
+POYA
+PUDENDA
+PUDENDUM
+PUSY
+PUTA
+PUTIN
+PUTO
+RADIOBASURA
+RAGHEAD
+RATA
+RELIGION
+RKOAL
+RKOKILER
+RKOPUTIN
+ROFRE
+ROPUTIN
+SHIT
+SLAG
+SLAUGHTER
+SLAVE
+SOD
+SPOTWAR
+STOPUTIN
+STOPWAR
+STUPID
+SUBNORMAL
+TERORIST
+TIT
+TONTO
+TOSER
+TOSPOT
+TRUCK
+TRUK
+TWAT
+URE
+VENGADOR
+WANK
+WASOCK
+WHORE
